gen/parser/CalendarParser.java
// Generated from /Users/amelia.arciszewski/git/CPSC-410/Project1Group23/src/parser/CalendarParser.g4 by ANTLR 4.10.1
package parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class CalendarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.10.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		DELIMITER=1, NEWLINE_EVT=2, PERIOD=3, OPEN_BRACKET=4, CLOSE_BRACKET=5, 
		CONDITION_START=6, CONDITION_END=7, EVENT_ATTRIBUTE=8, AVAILABILITY_START=9, 
		DAY_OF_WEEK=10, EVENTS=11, EVENT_DEC_SEP=12, EVENT_NAME=13, EVENT_LOCATION=14, 
		EVENT_DESCRIPTION=15, EVENT_DURATION_START=16, SCHEDULE_START=17, SLASH=18, 
		DATE=19, TIME=20, YEAR=21, MONTH=22, DAY=23, NAME_TO=24, DURATION_TO=25, 
		DATE_TO=26, TIME_TO=27, LOCATION_TO=28, DESCRIPTION_TO=29, REPEAT_START=30, 
		REPEAT_EVERY=31, REPEAT_END=32, PLACE_START=33, LOWER_AT=34, PUT_START=35, 
		PUT_END_IN=36, ON=37, CHANGE_START=38, IF_STATEMENT=39, THEN_STATEMENT=40, 
		ELSE_STATEMENT=41, AT=42, BETWEEN=43, IS=44, IS_NOT=45, AND=46, OR=47, 
		NOT=48, FREE=49, SET_START=50, WS=51, ALIAS=52, TEXT=53, DURATION_VAL=54;
	public static final int
		RULE_program = 0, RULE_events = 1, RULE_eventDec = 2, RULE_eventName = 3, 
		RULE_eventDuration = 4, RULE_eventLocationOrDescription = 5, RULE_eventLocation = 6, 
		RULE_eventDescription = 7, RULE_statement = 8, RULE_repeatStatement = 9, 
		RULE_schedule = 10, RULE_setStatement = 11, RULE_putStatement = 12, RULE_placeStatement = 13, 
		RULE_timeframe = 14, RULE_changeStatement = 15, RULE_eventAttributePair = 16, 
		RULE_namePair = 17, RULE_durationPair = 18, RULE_descriptionPair = 19, 
		RULE_locationPair = 20, RULE_datePair = 21, RULE_timePair = 22, RULE_ifStatement = 23, 
		RULE_andor = 24, RULE_elseStatement = 25, RULE_condition = 26, RULE_timeStatement = 27, 
		RULE_betweenStatement = 28, RULE_atTimeStatement = 29, RULE_isStatement = 30;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "events", "eventDec", "eventName", "eventDuration", "eventLocationOrDescription", 
			"eventLocation", "eventDescription", "statement", "repeatStatement", 
			"schedule", "setStatement", "putStatement", "placeStatement", "timeframe", 
			"changeStatement", "eventAttributePair", "namePair", "durationPair", 
			"descriptionPair", "locationPair", "datePair", "timePair", "ifStatement", 
			"andor", "elseStatement", "condition", "timeStatement", "betweenStatement", 
			"atTimeStatement", "isStatement"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, "'Availability:'", 
			null, null, "':'", null, null, null, null, null, "'/'", null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, "'PUT'", null, null, null, null, null, null, null, null, null, 
			null, null, null, null, "'free'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "DELIMITER", "NEWLINE_EVT", "PERIOD", "OPEN_BRACKET", "CLOSE_BRACKET", 
			"CONDITION_START", "CONDITION_END", "EVENT_ATTRIBUTE", "AVAILABILITY_START", 
			"DAY_OF_WEEK", "EVENTS", "EVENT_DEC_SEP", "EVENT_NAME", "EVENT_LOCATION", 
			"EVENT_DESCRIPTION", "EVENT_DURATION_START", "SCHEDULE_START", "SLASH", 
			"DATE", "TIME", "YEAR", "MONTH", "DAY", "NAME_TO", "DURATION_TO", "DATE_TO", 
			"TIME_TO", "LOCATION_TO", "DESCRIPTION_TO", "REPEAT_START", "REPEAT_EVERY", 
			"REPEAT_END", "PLACE_START", "LOWER_AT", "PUT_START", "PUT_END_IN", "ON", 
			"CHANGE_START", "IF_STATEMENT", "THEN_STATEMENT", "ELSE_STATEMENT", "AT", 
			"BETWEEN", "IS", "IS_NOT", "AND", "OR", "NOT", "FREE", "SET_START", "WS", 
			"ALIAS", "TEXT", "DURATION_VAL"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "CalendarParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public CalendarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public EventsContext events() {
			return getRuleContext(EventsContext.class,0);
		}
		public ScheduleContext schedule() {
			return getRuleContext(ScheduleContext.class,0);
		}
		public TerminalNode EOF() { return getToken(CalendarParser.EOF, 0); }
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CalendarParserListener ) ((CalendarParserListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CalendarParserListener ) ((CalendarParserListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CalendarParserVisitor ) return ((CalendarParserVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(62);
			events();
			setState(63);
			schedule();
			setState(64);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EventsContext extends ParserRuleContext {
		public TerminalNode EVENTS() { return getToken(CalendarParser.EVENTS, 0); }
		public List<EventDecContext> eventDec() {
			return getRuleContexts(EventDecContext.class);
		}
		public EventDecContext eventDec(int i) {
			return getRuleContext(EventDecContext.class,i);
		}
		public TerminalNode PERIOD() { return getToken(CalendarParser.PERIOD, 0); }
		public List<TerminalNode> DELIMITER() { return getTokens(CalendarParser.DELIMITER); }
		public TerminalNode DELIMITER(int i) {
			return getToken(CalendarParser.DELIMITER, i);
		}
		public List<TerminalNode> NEWLINE_EVT() { return getTokens(CalendarParser.NEWLINE_EVT); }
		public TerminalNode NEWLINE_EVT(int i) {
			return getToken(CalendarParser.NEWLINE_EVT, i);
		}
		public EventsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_events; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CalendarParserListener ) ((CalendarParserListener)listener).enterEvents(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CalendarParserListener ) ((CalendarParserListener)listener).exitEvents(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CalendarParserVisitor ) return ((CalendarParserVisitor<? extends T>)visitor).visitEvents(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EventsContext events() throws RecognitionException {
		EventsContext _localctx = new EventsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_events);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(66);
			match(EVENTS);
			setState(67);
			eventDec();
			setState(73);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==DELIMITER) {
				{
				{
				setState(68);
				match(DELIMITER);
				setState(69);
				match(NEWLINE_EVT);
				setState(70);
				eventDec();
				}
				}
				setState(75);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(76);
			match(PERIOD);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EventDecContext extends ParserRuleContext {
		public TerminalNode ALIAS() { return getToken(CalendarParser.ALIAS, 0); }
		public TerminalNode EVENT_DEC_SEP() { return getToken(CalendarParser.EVENT_DEC_SEP, 0); }
		public TerminalNode OPEN_BRACKET() { return getToken(CalendarParser.OPEN_BRACKET, 0); }
		public EventNameContext eventName() {
			return getRuleContext(EventNameContext.class,0);
		}
		public EventDurationContext eventDuration() {
			return getRuleContext(EventDurationContext.class,0);
		}
		public TerminalNode CLOSE_BRACKET() { return getToken(CalendarParser.CLOSE_BRACKET, 0); }
		public EventLocationOrDescriptionContext eventLocationOrDescription() {
			return getRuleContext(EventLocationOrDescriptionContext.class,0);
		}
		public EventDecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_eventDec; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CalendarParserListener ) ((CalendarParserListener)listener).enterEventDec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CalendarParserListener ) ((CalendarParserListener)listener).exitEventDec(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CalendarParserVisitor ) return ((CalendarParserVisitor<? extends T>)visitor).visitEventDec(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EventDecContext eventDec() throws RecognitionException {
		EventDecContext _localctx = new EventDecContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_eventDec);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(78);
			match(ALIAS);
			setState(79);
			match(EVENT_DEC_SEP);
			setState(80);
			match(OPEN_BRACKET);
			setState(81);
			eventName();
			setState(82);
			eventDuration();
			setState(84);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==DELIMITER) {
				{
				setState(83);
				eventLocationOrDescription();
				}
			}

			setState(86);
			match(CLOSE_BRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EventNameContext extends ParserRuleContext {
		public TerminalNode EVENT_NAME() { return getToken(CalendarParser.EVENT_NAME, 0); }
		public TerminalNode TEXT() { return getToken(CalendarParser.TEXT, 0); }
		public EventNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_eventName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CalendarParserListener ) ((CalendarParserListener)listener).enterEventName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CalendarParserListener ) ((CalendarParserListener)listener).exitEventName(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CalendarParserVisitor ) return ((CalendarParserVisitor<? extends T>)visitor).visitEventName(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EventNameContext eventName() throws RecognitionException {
		EventNameContext _localctx = new EventNameContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_eventName);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(88);
			match(EVENT_NAME);
			setState(89);
			match(TEXT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EventDurationContext extends ParserRuleContext {
		public TerminalNode DELIMITER() { return getToken(CalendarParser.DELIMITER, 0); }
		public TerminalNode EVENT_DURATION_START() { return getToken(CalendarParser.EVENT_DURATION_START, 0); }
		public TerminalNode DURATION_VAL() { return getToken(CalendarParser.DURATION_VAL, 0); }
		public EventDurationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_eventDuration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CalendarParserListener ) ((CalendarParserListener)listener).enterEventDuration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CalendarParserListener ) ((CalendarParserListener)listener).exitEventDuration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CalendarParserVisitor ) return ((CalendarParserVisitor<? extends T>)visitor).visitEventDuration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EventDurationContext eventDuration() throws RecognitionException {
		EventDurationContext _localctx = new EventDurationContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_eventDuration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(91);
			match(DELIMITER);
			setState(92);
			match(EVENT_DURATION_START);
			setState(93);
			match(DURATION_VAL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EventLocationOrDescriptionContext extends ParserRuleContext {
		public TerminalNode DELIMITER() { return getToken(CalendarParser.DELIMITER, 0); }
		public EventLocationContext eventLocation() {
			return getRuleContext(EventLocationContext.class,0);
		}
		public EventDescriptionContext eventDescription() {
			return getRuleContext(EventDescriptionContext.class,0);
		}
		public EventLocationOrDescriptionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_eventLocationOrDescription; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CalendarParserListener ) ((CalendarParserListener)listener).enterEventLocationOrDescription(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CalendarParserListener ) ((CalendarParserListener)listener).exitEventLocationOrDescription(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CalendarParserVisitor ) return ((CalendarParserVisitor<? extends T>)visitor).visitEventLocationOrDescription(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EventLocationOrDescriptionContext eventLocationOrDescription() throws RecognitionException {
		EventLocationOrDescriptionContext _localctx = new EventLocationOrDescriptionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_eventLocationOrDescription);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(95);
			match(DELIMITER);
			setState(98);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case EVENT_LOCATION:
				{
				setState(96);
				eventLocation();
				}
				break;
			case EVENT_DESCRIPTION:
				{
				setState(97);
				eventDescription();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EventLocationContext extends ParserRuleContext {
		public TerminalNode EVENT_LOCATION() { return getToken(CalendarParser.EVENT_LOCATION, 0); }
		public TerminalNode TEXT() { return getToken(CalendarParser.TEXT, 0); }
		public TerminalNode DELIMITER() { return getToken(CalendarParser.DELIMITER, 0); }
		public EventDescriptionContext eventDescription() {
			return getRuleContext(EventDescriptionContext.class,0);
		}
		public EventLocationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_eventLocation; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CalendarParserListener ) ((CalendarParserListener)listener).enterEventLocation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CalendarParserListener ) ((CalendarParserListener)listener).exitEventLocation(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CalendarParserVisitor ) return ((CalendarParserVisitor<? extends T>)visitor).visitEventLocation(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EventLocationContext eventLocation() throws RecognitionException {
		EventLocationContext _localctx = new EventLocationContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_eventLocation);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			match(EVENT_LOCATION);
			setState(101);
			match(TEXT);
			setState(104);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==DELIMITER) {
				{
				setState(102);
				match(DELIMITER);
				setState(103);
				eventDescription();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EventDescriptionContext extends ParserRuleContext {
		public TerminalNode EVENT_DESCRIPTION() { return getToken(CalendarParser.EVENT_DESCRIPTION, 0); }
		public TerminalNode TEXT() { return getToken(CalendarParser.TEXT, 0); }
		public EventDescriptionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_eventDescription; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CalendarParserListener ) ((CalendarParserListener)listener).enterEventDescription(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CalendarParserListener ) ((CalendarParserListener)listener).exitEventDescription(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CalendarParserVisitor ) return ((CalendarParserVisitor<? extends T>)visitor).visitEventDescription(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EventDescriptionContext eventDescription() throws RecognitionException {
		EventDescriptionContext _localctx = new EventDescriptionContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_eventDescription);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			match(EVENT_DESCRIPTION);
			setState(107);
			match(TEXT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public SetStatementContext setStatement() {
			return getRuleContext(SetStatementContext.class,0);
		}
		public RepeatStatementContext repeatStatement() {
			return getRuleContext(RepeatStatementContext.class,0);
		}
		public ChangeStatementContext changeStatement() {
			return getRuleContext(ChangeStatementContext.class,0);
		}
		public IfStatementContext ifStatement() {
			return getRuleContext(IfStatementContext.class,0);
		}
		public PutStatementContext putStatement() {
			return getRuleContext(PutStatementContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CalendarParserListener ) ((CalendarParserListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CalendarParserListener ) ((CalendarParserListener)listener).exitStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CalendarParserVisitor ) return ((CalendarParserVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_statement);
		try {
			setState(114);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case SET_START:
				enterOuterAlt(_localctx, 1);
				{
				setState(109);
				setStatement();
				}
				break;
			case REPEAT_START:
				enterOuterAlt(_localctx, 2);
				{
				setState(110);
				repeatStatement();
				}
				break;
			case CHANGE_START:
				enterOuterAlt(_localctx, 3);
				{
				setState(111);
				changeStatement();
				}
				break;
			case IF_STATEMENT:
				enterOuterAlt(_localctx, 4);
				{
				setState(112);
				ifStatement();
				}
				break;
			case PUT_START:
				enterOuterAlt(_localctx, 5);
				{
				setState(113);
				putStatement();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RepeatStatementContext extends ParserRuleContext {
		public TerminalNode REPEAT_START() { return getToken(CalendarParser.REPEAT_START, 0); }
		public TerminalNode ALIAS() { return getToken(CalendarParser.ALIAS, 0); }
		public TerminalNode REPEAT_EVERY() { return getToken(CalendarParser.REPEAT_EVERY, 0); }
		public TimeframeContext timeframe() {
			return getRuleContext(TimeframeContext.class,0);
		}
		public TerminalNode REPEAT_END() { return getToken(CalendarParser.REPEAT_END, 0); }
		public TerminalNode DATE() { return getToken(CalendarParser.DATE, 0); }
		public TerminalNode PERIOD() { return getToken(CalendarParser.PERIOD, 0); }
		public RepeatStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_repeatStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CalendarParserListener ) ((CalendarParserListener)listener).enterRepeatStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CalendarParserListener ) ((CalendarParserListener)listener).exitRepeatStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CalendarParserVisitor ) return ((CalendarParserVisitor<? extends T>)visitor).visitRepeatStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RepeatStatementContext repeatStatement() throws RecognitionException {
		RepeatStatementContext _localctx = new RepeatStatementContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_repeatStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116);
			match(REPEAT_START);
			setState(117);
			match(ALIAS);
			setState(118);
			match(REPEAT_EVERY);
			setState(119);
			timeframe();
			setState(120);
			match(REPEAT_END);
			setState(121);
			match(DATE);
			setState(122);
			match(PERIOD);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ScheduleContext extends ParserRuleContext {
		public TerminalNode SCHEDULE_START() { return getToken(CalendarParser.SCHEDULE_START, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public ScheduleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_schedule; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CalendarParserListener ) ((CalendarParserListener)listener).enterSchedule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CalendarParserListener ) ((CalendarParserListener)listener).exitSchedule(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CalendarParserVisitor ) return ((CalendarParserVisitor<? extends T>)visitor).visitSchedule(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ScheduleContext schedule() throws RecognitionException {
		ScheduleContext _localctx = new ScheduleContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_schedule);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(124);
			match(SCHEDULE_START);
			setState(125);
			statement();
			setState(129);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << REPEAT_START) | (1L << PUT_START) | (1L << CHANGE_START) | (1L << IF_STATEMENT) | (1L << SET_START))) != 0)) {
				{
				{
				setState(126);
				statement();
				}
				}
				setState(131);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SetStatementContext extends ParserRuleContext {
		public TerminalNode SET_START() { return getToken(CalendarParser.SET_START, 0); }
		public TerminalNode ALIAS() { return getToken(CalendarParser.ALIAS, 0); }
		public TerminalNode ON() { return getToken(CalendarParser.ON, 0); }
		public TerminalNode DATE() { return getToken(CalendarParser.DATE, 0); }
		public TerminalNode LOWER_AT() { return getToken(CalendarParser.LOWER_AT, 0); }
		public TerminalNode TIME() { return getToken(CalendarParser.TIME, 0); }
		public TerminalNode PERIOD() { return getToken(CalendarParser.PERIOD, 0); }
		public SetStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_setStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CalendarParserListener ) ((CalendarParserListener)listener).enterSetStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CalendarParserListener ) ((CalendarParserListener)listener).exitSetStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CalendarParserVisitor ) return ((CalendarParserVisitor<? extends T>)visitor).visitSetStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SetStatementContext setStatement() throws RecognitionException {
		SetStatementContext _localctx = new SetStatementContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_setStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(132);
			match(SET_START);
			setState(133);
			match(ALIAS);
			setState(134);
			match(ON);
			setState(135);
			match(DATE);
			setState(136);
			match(LOWER_AT);
			setState(137);
			match(TIME);
			setState(138);
			match(PERIOD);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
